2021-07-15  Megan Gardner  <megan_gardner@apple.com>

        Rename scrollRectIntoView to scrollContainingScrollViewsToRevealRect for clarity.
        https://bugs.webkit.org/show_bug.cgi?id=227995

        Reviewed by Tim Horton.

        No behavior change.

        * loader/EmptyClients.h:
        * page/Chrome.cpp:
        (WebCore::Chrome::scrollContainingScrollViewsToRevealRect const):
        (WebCore::Chrome::scrollRectIntoView const): Deleted.
        * page/Chrome.h:
        * page/ChromeClient.h:
        (WebCore::ChromeClient::scrollContainingScrollViewsToRevealRect const):
        (WebCore::ChromeClient::scrollRectIntoView const): Deleted.
        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::scrollRectToVisible):

2021-07-15  Brady Eidson  <beidson@apple.com>

        Use WeakPtr with UniqueIDBDatabaseConnection
        <rdar://79447808> and https://bugs.webkit.org/show_bug.cgi?id=227969

        Reviewed by Geoff Garen.

        No new tests possible.
        
        Noticed this raw ptr which was raw to break a ref cycle.
        WeakPtr works better.

        * Modules/indexeddb/server/UniqueIDBDatabaseConnection.h:
        * Modules/indexeddb/server/UniqueIDBDatabaseTransaction.cpp:
        (WebCore::IDBServer::UniqueIDBDatabaseTransaction::UniqueIDBDatabaseTransaction):
        (WebCore::IDBServer::UniqueIDBDatabaseTransaction::~UniqueIDBDatabaseTransaction):
        (WebCore::IDBServer::UniqueIDBDatabaseTransaction::databaseConnection):
        (WebCore::IDBServer::UniqueIDBDatabaseTransaction::abort):
        (WebCore::IDBServer::UniqueIDBDatabaseTransaction::abortWithoutCallback):
        (WebCore::IDBServer::UniqueIDBDatabaseTransaction::commit):
        (WebCore::IDBServer::UniqueIDBDatabaseTransaction::createObjectStore):
        (WebCore::IDBServer::UniqueIDBDatabaseTransaction::deleteObjectStore):
        (WebCore::IDBServer::UniqueIDBDatabaseTransaction::renameObjectStore):